--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,25 @@
-<p>
-  user works!
-</p>
+<h1>Usuarios Registrados</h1>
+<div class="clear"></div>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">First name</th>
+      <th scope="col">Second name</th>
+      <th scope="col">First surname</th>
+      <th scope="col">Second surname</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Address</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+      <td>5586009578</td>
+      <td>@Lirio 20 lomas de san miguel</td>
+    </tr>
+    
+  </tbody>
+</table>
